fix: left align text on input groups

--- a/app/components/irelia/form/group/index.pcss
+++ b/app/components/irelia/form/group/index.pcss
@@ -1,9 +1,9 @@
 @layer components {
   .irelia-form__group {
-    @apply flex flex-col shadow-sm bg-white rounded p-5 relative w-full gap-y-1.5;
+    @apply flex flex-col shadow-sm bg-white rounded p-5 relative w-full gap-y-1.5 text-left;
 
     label {
-      @apply font-bold uppercase text-sm text-irelia-primary whitespace-nowrap text-left;
+      @apply font-bold uppercase text-sm text-irelia-primary whitespace-nowrap;
     }
 
     &.irelia-form__group--invalid {
